--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "body-parser": "^1.20.2",
     "ejs": "^2.7.4",
     "express": "^4.19.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.4.5"
   },
   "description": ""
 }
